Armature object with negative scale wireframe and selection bones are wrong #65114

Closed
opened 2019-05-25 12:25:28 +02:00 by Luis Miguel Pérez González · 14 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.01

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: b3f96da2e6
Worked: (optional)

Short description of error
In armatures there is an error in the selection edge when we scale an axis in negative.

Exact steps for others to reproduce the error

  1. Create an Armature.
  2. In Object Mode scale the Armature by x -1.
    3 Check that the selection border is now wrong.

Armature visual select bug.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.01 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: `b3f96da2e6` Worked: (optional) **Short description of error** In armatures there is an error in the selection edge when we scale an axis in negative. **Exact steps for others to reproduce the error** 1. Create an Armature. 2. In Object Mode scale the Armature by x -1. 3 Check that the selection border is now wrong. [Armature visual select bug.blend](https://archive.blender.org/developer/F7067338/Armature_visual_select_bug.blend)

Added subscriber: @Wilson-14

Added subscriber: @Wilson-14

#71913 was marked as duplicate of this issue

#71913 was marked as duplicate of this issue

#71697 was marked as duplicate of this issue

#71697 was marked as duplicate of this issue

#66878 was marked as duplicate of this issue

#66878 was marked as duplicate of this issue
Brecht Van Lommel changed title from Armature visual select bug. to Armature object with negative scale wireframe and selection bones are wrong 2019-05-29 02:00:05 +02:00

Added subscriber: @brady42537

Added subscriber: @brady42537
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

raising prio since it has been reported often [not all were merged as duplicates here]

raising prio since it has been reported often [not all were merged as duplicates here]
Member

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Member

Added subscriber: @lateasusual

Added subscriber: @lateasusual

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Jeroen Bakker was assigned by Sybren A. Stüvel 2020-01-06 11:59:59 +01:00

2.81a release:

image.png

Current master:

image.png

2.81a release: ![image.png](https://archive.blender.org/developer/F8262046/image.png) Current master: ![image.png](https://archive.blender.org/developer/F8262048/image.png)
Jeroen Bakker was unassigned by Clément Foucault 2020-02-03 13:01:04 +01:00
Clément Foucault self-assigned this 2020-02-03 13:01:04 +01:00

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This issue was referenced by dcf44dfe8e

This issue was referenced by dcf44dfe8e0b0a084554ecb2cb2d34f0e273d933

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65114
No description provided.