Fix T65114 Overlay: Armature: Bones with negative scale have wrong display

This moves the backface culling to the fragment shader to avoid all the
limitations of the current system. This has a cost but it is unlikely that
bone drawing will be a bottleneck.